--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="icon" href="images/favicon.png">
   </head>
   <body>
+
+    <!-- HEADER -->
+
     <header class="header">
       <div class="header__wrapper">
         <ul class="top-header">
@@ -52,13 +55,116 @@
         </nav>
       </div>
     </header>
-    <main>
-      <div class="about">
-        <h2 class="about__title">Miami best<br> Real estate here</h2>
-        <div class="about__info"></div>
-      </div>
-    </main>
 
+    <!-- MAIN -->
+
+    <main>
+      <div class="main-wrapper">
+        <section class="about">
+          <h2 class="about__title">Miami best<br> Real estate <a href="#" class="about__link">here</a></h2>
+          <div class="about__info info">
+            <h3 class="info__title">Over 50 years experience in love.</h3>
+            <div class="info__text">
+            <p class="info__paragraph">Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
+
+            <p class="info__paragraph">The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200 satisfied customers premium segment. We focus only on new buildings and high-level doskanalno know this area better than other specialists.Working directly with developers - so have more useful information about the profitable deals.</p>
+
+            <p class="info__guarantee">We will never be late!<br> Guaranteed secure transaction - 100%</p>
+            </div>
+          </div>
+        </section>
+        <section class="gallery">
+          <h2 class="gallery__title">Gallery</h2>
+          <div class="gallery__location">
+            <div class="gallery__photos">
+              <img src="../images/photos/1.jpg" alt="Marina Palms" class="gallery__img">
+              <img src="../images/photos/2.jpg" alt="Marina Palms" class="gallery__img">
+            </div>
+            <p class="gallery__city-name"><a href="#" class="gallery__link">Marina Palms</a> / North Miami Beach, FL 33162</p>
+            <div class="gallery__photos">
+              <img src="../images/photos/3.jpg" alt="Edition Residens" class="gallery__img">
+              <img src="../images/photos/4.jpg" alt="Edition Residens" class="gallery__img">
+            </div>
+            <p class="gallery__city-name"><a href="#" class="gallery__link">Edition Residens</a> / Miami Beach, FL 33139</p>
+            <div class="gallery__photos">
+              <img src="../images/photos/5.jpg" alt="Faena House" class="gallery__img">
+              <img src="../images/photos/6.jpg" alt="Faena House" class="gallery__img">
+            </div>
+            <p class="gallery__city-name"><a href="#" class="gallery__link">Faena House</a> / Miami Beach, FL 33140</p>
+            <button class="gallery__btn">View all</button>
+          </div>
+        </section>
+        <section class="consultation">
+          <h2 class="consultation__title">Consultation</h2>
+          <div class="consultation-inner">
+            <div class="consultation-inner__item">
+              <h3 class="consultation-inner__title">How long have you do<br> yourself a gift?</h3>
+              <p class="consultation-inner__text">The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
+            </div>
+            <div class="consultation-inner__item">
+              <form action="url" class="consultation-form">
+                <input type="text" class="consultation-form__name" placeholder="Name">
+                <input type="text" class="consultation-form__phone" placeholder="Phone">
+                <input type="email" class="consultation-form__email" placeholder="Email">
+                <button class="consultation-form__btn" type="submit">Consultation</button>
+              </form>
+            </div>
+          </div>
+        </section>
+        <section class="testimonails">
+          <h2 class="testimonails__title">Testimonails</h2>
+          <div class="testimonails-block">
+            <div class="testimonails-block__card">
+              <img src="../images/people/photo 1.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <h3 class="testimonails-block__name">Leslie Mckinney</h3>
+              <p class="testimonails-block__title">CEO</p>
+              <p class="testimonails-block__about">Nice work, Certificates National Association of Realtors (USA)</p>
+            </div>
+            <div class="testimonails-block__card">
+              <img src="../images/people/photo 2.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <h3 class="testimonails-block__name">Scarlett Hawkins</h3>
+              <p class="testimonails-block__title">Senior Vice President</p>
+              <p class="testimonails-block__about">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart</p>
+            </div>
+            <div class="testimonails-block__card">
+              <img src="../images/people/photo 3.jpg" alt="Max Henry" class="testimonails-block__photo">
+              <h3 class="testimonails-block__name">Max Henry</h3>
+              <p class="testimonails-block__title">Chief Design Officer</p>
+              <p class="testimonails-block__about">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
+            </div>
+          </div>
+        </section>
+        <section class="contact">
+          <h2 class="contact__title">Contact us</h2>
+          <div class="contact-block">
+            <div class="contact-info">
+              <div class="contact-info__item">
+                <h5 class="contact-info__phone">Phone</h5>
+                <p class="contact-info__number">+1 234 5555-55-55</p>
+                <h5 class="contact-info__email">Email</h5>
+                <p class="contact-info__email-address">hello@miami.com</p>
+              </div>
+              <div class="contact-info__item">
+                <h5 class="contact-info__adress">Address</h5>
+                <p class="contact-info__location">400 first ave. n.<br> suite 700<br> Minneapolis, MN<br> 55401</p>
+              </div>
+            </div>
+            <form action="url" class="contact-form">
+              <input type="text" class="contact-form__name" placeholder="Name">
+              <input type="email" class="contact-form__email" placeholder="Email">
+              <textarea cols="30" class="contact-form__message" rows="10" placeholder="Message"></textarea>
+              <button type="submit" class="contact-form__btn">Consultation</button>
+            </form>
+          </div>
+        </section>
+      </div>
+
+      <!-- FOOTER -->
+
+      <footer class="footer">
+        <img src="../images/logo.png" alt="logo" class="footer__logo">
+      </footer>
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
