--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </li>
           <li class="top-header__item">
             <a href="#" class="logo-link">
-              <img src="../images/logo.png" alt="logo" class="logo-link__image">
+              <img src="./images/logo.png" alt="logo" class="logo-link__image">
             </a>
           </li>
           <li class="top-header__item">
@@ -77,18 +77,18 @@
           <h2 class="gallery__title">Gallery</h2>
           <div class="gallery__location">
             <div class="gallery__photos">
-              <img src="../images/photos/1.jpg" alt="Marina Palms" class="gallery__img">
-              <img src="../images/photos/2.jpg" alt="Marina Palms" class="gallery__img">
+              <img src="./images/photos/1.jpg" alt="Marina Palms" class="gallery__img">
+              <img src="./images/photos/2.jpg" alt="Marina Palms" class="gallery__img">
             </div>
             <p class="gallery__city-name"><a href="#" class="gallery__link">Marina Palms</a> / North Miami Beach, FL 33162</p>
             <div class="gallery__photos">
-              <img src="../images/photos/3.jpg" alt="Edition Residens" class="gallery__img">
-              <img src="../images/photos/4.jpg" alt="Edition Residens" class="gallery__img">
+              <img src="./images/photos/3.jpg" alt="Edition Residens" class="gallery__img">
+              <img src="./images/photos/4.jpg" alt="Edition Residens" class="gallery__img">
             </div>
             <p class="gallery__city-name"><a href="#" class="gallery__link">Edition Residens</a> / Miami Beach, FL 33139</p>
             <div class="gallery__photos">
-              <img src="../images/photos/5.jpg" alt="Faena House" class="gallery__img">
-              <img src="../images/photos/6.jpg" alt="Faena House" class="gallery__img">
+              <img src="./images/photos/5.jpg" alt="Faena House" class="gallery__img">
+              <img src="./images/photos/6.jpg" alt="Faena House" class="gallery__img">
             </div>
             <p class="gallery__city-name"><a href="#" class="gallery__link">Faena House</a> / Miami Beach, FL 33140</p>
             <button class="gallery__btn">View all</button>
@@ -115,19 +115,19 @@
           <h2 class="testimonails__title">Testimonails</h2>
           <div class="testimonails-block">
             <div class="testimonails-block__card">
-              <img src="../images/people/photo 1.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <img src="./images/people/photo 1.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
               <h3 class="testimonails-block__name">Leslie Mckinney</h3>
               <p class="testimonails-block__title">CEO</p>
               <p class="testimonails-block__about">Nice work, Certificates National Association of Realtors (USA)</p>
             </div>
             <div class="testimonails-block__card">
-              <img src="../images/people/photo 2.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <img src="./images/people/photo 2.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
               <h3 class="testimonails-block__name">Scarlett Hawkins</h3>
               <p class="testimonails-block__title">Senior Vice President</p>
               <p class="testimonails-block__about">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart</p>
             </div>
             <div class="testimonails-block__card">
-              <img src="../images/people/photo 3.jpg" alt="Max Henry" class="testimonails-block__photo">
+              <img src="./images/people/photo 3.jpg" alt="Max Henry" class="testimonails-block__photo">
               <h3 class="testimonails-block__name">Max Henry</h3>
               <p class="testimonails-block__title">Chief Design Officer</p>
               <p class="testimonails-block__about">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
@@ -162,7 +162,7 @@
       <!-- FOOTER -->
 
       <footer class="footer">
-        <img src="../images/logo.png" alt="logo" class="footer__logo">
+        <img src="./images/logo.png" alt="logo" class="footer__logo">
       </footer>
     </main>
     <script type="text/javascript" src="scripts/main.js"></script>
