--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miami</title>
-    <link rel="stylesheet" href="./styles/main.css">
-    <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" href="./styles/main.css" />
+    <link rel="icon" href="images/favicon.png" />
   </head>
   <body>
-
     <!-- HEADER -->
 
     <header class="header">
@@ -18,9 +17,23 @@
             +1 234 555-55-55
           </li>
           <li class="top-header__item">
+            <img src="./images/mobile-icon.svg" alt="mobile icon" />
+          </li>
+          <li class="top-header__item">
             <a href="#" class="logo-link">
-              <img src="./images/logo.png" alt="logo" class="logo-link__image">
+              <img
+                src="./images/logo.png"
+                alt="logo"
+                class="logo-link__image"
+              />
             </a>
+          </li>
+          <li class="top-header__item">
+            <div class="hamburger-block">
+              <div class="hamburger-block__item"></div>
+              <div class="hamburger-block__item"></div>
+              <div class="hamburger-block__item"></div>
+            </div>
           </li>
           <li class="top-header__item">
             <a href="#" class="top-header__link top-header__link_active">
@@ -29,7 +42,10 @@
           </li>
         </ul>
 
-        <h1 class="header__title">Miami<br> Condo Kings</h1>
+        <h1 class="header__title">
+          Miami<br />
+          Condo Kings
+        </h1>
 
         <nav class="nav header__nav">
           <ul class="nav__list">
@@ -53,6 +69,38 @@
             </li>
           </ul>
         </nav>
+        <nav class="mobile-nav">
+          <div class="hamburger-mobile">
+            <div class="hamburger-block__item"></div>
+            <div class="hamburger-block__item"></div>
+            <div class="hamburger-block__item"></div>
+          </div>
+          <img src="./images/logo.png" alt="logo" class="mobile-nav__logo" />
+          <ul class="mobile-nav__list">
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">Home</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">About Us</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">Gallery</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">Consultation</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">Testimonials</a>
+            </li>
+            <li class="mobile-nav__item">
+              <a href="#" class="mobile-nav__link">Contacts</a>
+            </li>
+          </ul>
+          <div class="mobile-nav__contact">
+            <div class="mobile-nav__number">+1 234 555-55-55</div>
+            <div class="mobile-nav__call"> <a href="#" class="mobile-nav__link-call">call to order</a></div>
+          </div>
+        </nav>
       </div>
     </header>
 
@@ -61,15 +109,32 @@
     <main>
       <div class="main-wrapper">
         <section class="about">
-          <h2 class="about__title">Miami best<br> Real estate <a href="#" class="about__link">here</a></h2>
+          <h2 class="about__title">
+            Miami best<br />
+            Real estate <a href="#" class="about__link">here</a>
+          </h2>
           <div class="about__info info">
             <h3 class="info__title">Over 50 years experience in love.</h3>
             <div class="info__text">
-            <p class="info__paragraph">Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
+              <p class="info__paragraph">
+                Mazel and VA Tsukkerman in his "Analysis of musical works."
+                Pointillism, which originated in the music of the early
+                twentieth century, microforms, found a distant historical.
+              </p>
 
-            <p class="info__paragraph">The market leader in real estate since 2003. Awards Real Estate Company, 2010, 2011, 2013. More than 200 satisfied customers premium segment. We focus only on new buildings and high-level doskanalno know this area better than other specialists.Working directly with developers - so have more useful information about the profitable deals.</p>
+              <p class="info__paragraph">
+                The market leader in real estate since 2003. Awards Real Estate
+                Company, 2010, 2011, 2013. More than 200 satisfied customers
+                premium segment. We focus only on new buildings and high-level
+                doskanalno know this area better than other specialists.Working
+                directly with developers - so have more useful information about
+                the profitable deals.
+              </p>
 
-            <p class="info__guarantee">We will never be late!<br> Guaranteed secure transaction - 100%</p>
+              <p class="info__guarantee">
+                We will never be late!<br />
+                Guaranteed secure transaction - 100%
+              </p>
             </div>
           </div>
         </section>
@@ -77,20 +142,53 @@
           <h2 class="gallery__title">Gallery</h2>
           <div class="gallery__location">
             <div class="gallery__photos">
-              <img src="./images/photos/1.jpg" alt="Marina Palms" class="gallery__img">
-              <img src="./images/photos/2.jpg" alt="Marina Palms" class="gallery__img">
+              <img
+                src="./images/photos/1.jpg"
+                alt="Marina Palms"
+                class="gallery__img"
+              />
+              <img
+                src="./images/photos/2.jpg"
+                alt="Marina Palms"
+                class="gallery__img"
+              />
             </div>
-            <p class="gallery__city-name"><a href="#" class="gallery__link">Marina Palms</a> / North Miami Beach, FL 33162</p>
+            <p class="gallery__city-name">
+              <a href="#" class="gallery__link">Marina Palms</a> / North Miami
+              Beach, FL 33162
+            </p>
             <div class="gallery__photos">
-              <img src="./images/photos/3.jpg" alt="Edition Residens" class="gallery__img">
-              <img src="./images/photos/4.jpg" alt="Edition Residens" class="gallery__img">
+              <img
+                src="./images/photos/3.jpg"
+                alt="Edition Residens"
+                class="gallery__img"
+              />
+              <img
+                src="./images/photos/4.jpg"
+                alt="Edition Residens"
+                class="gallery__img"
+              />
             </div>
-            <p class="gallery__city-name"><a href="#" class="gallery__link">Edition Residens</a> / Miami Beach, FL 33139</p>
+            <p class="gallery__city-name">
+              <a href="#" class="gallery__link">Edition Residens</a> / Miami
+              Beach, FL 33139
+            </p>
             <div class="gallery__photos">
-              <img src="./images/photos/5.jpg" alt="Faena House" class="gallery__img">
-              <img src="./images/photos/6.jpg" alt="Faena House" class="gallery__img">
+              <img
+                src="./images/photos/5.jpg"
+                alt="Faena House"
+                class="gallery__img"
+              />
+              <img
+                src="./images/photos/6.jpg"
+                alt="Faena House"
+                class="gallery__img"
+              />
             </div>
-            <p class="gallery__city-name"><a href="#" class="gallery__link">Faena House</a> / Miami Beach, FL 33140</p>
+            <p class="gallery__city-name">
+              <a href="#" class="gallery__link">Faena House</a> / Miami Beach,
+              FL 33140
+            </p>
             <button class="gallery__btn">View all</button>
           </div>
         </section>
@@ -98,15 +196,38 @@
           <h2 class="consultation__title">Consultation</h2>
           <div class="consultation-inner">
             <div class="consultation-inner__item">
-              <h3 class="consultation-inner__title">How long have you do<br> yourself a gift?</h3>
-              <p class="consultation-inner__text">The procedural change mezzo forte starts izoritmichesky pickup at these moments stop LA Mazel and VA Tsukkerman in his "Analysis of musical works." Pointillism, which originated in the music of the early twentieth century, microforms, found a distant historical.</p>
+              <h3 class="consultation-inner__title">
+                How long have you do<br />
+                yourself a gift?
+              </h3>
+              <p class="consultation-inner__text">
+                The procedural change mezzo forte starts izoritmichesky pickup
+                at these moments stop LA Mazel and VA Tsukkerman in his
+                "Analysis of musical works." Pointillism, which originated in
+                the music of the early twentieth century, microforms, found a
+                distant historical.
+              </p>
             </div>
             <div class="consultation-inner__item">
               <form action="url" class="consultation-form">
-                <input type="text" class="consultation-form__name" placeholder="Name">
-                <input type="text" class="consultation-form__phone" placeholder="Phone">
-                <input type="email" class="consultation-form__email" placeholder="Email">
-                <button class="consultation-form__btn" type="submit">Consultation</button>
+                <input
+                  type="text"
+                  class="consultation-form__name"
+                  placeholder="Name"
+                />
+                <input
+                  type="text"
+                  class="consultation-form__phone"
+                  placeholder="Phone"
+                />
+                <input
+                  type="email"
+                  class="consultation-form__email"
+                  placeholder="Email"
+                />
+                <button class="consultation-form__btn" type="submit">
+                  Consultation
+                </button>
               </form>
             </div>
           </div>
@@ -115,22 +236,42 @@
           <h2 class="testimonails__title">Testimonails</h2>
           <div class="testimonails-block">
             <div class="testimonails-block__card">
-              <img src="./images/people/photo 1.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <img
+                src="./images/people/photo 1.jpg"
+                alt="Leslie Mckinney"
+                class="testimonails-block__photo"
+              />
               <h3 class="testimonails-block__name">Leslie Mckinney</h3>
               <p class="testimonails-block__title">CEO</p>
-              <p class="testimonails-block__about">Nice work, Certificates National Association of Realtors (USA)</p>
+              <p class="testimonails-block__about">
+                Nice work, Certificates National Association of Realtors (USA)
+              </p>
             </div>
             <div class="testimonails-block__card">
-              <img src="./images/people/photo 2.jpg" alt="Leslie Mckinney" class="testimonails-block__photo">
+              <img
+                src="./images/people/photo 2.jpg"
+                alt="Leslie Mckinney"
+                class="testimonails-block__photo"
+              />
               <h3 class="testimonails-block__name">Scarlett Hawkins</h3>
               <p class="testimonails-block__title">Senior Vice President</p>
-              <p class="testimonails-block__about">My soul is illuminated by an unearthly joy, as these beautiful spring morning, which I enjoy with all my heart</p>
+              <p class="testimonails-block__about">
+                My soul is illuminated by an unearthly joy, as these beautiful
+                spring morning, which I enjoy with all my heart
+              </p>
             </div>
             <div class="testimonails-block__card">
-              <img src="./images/people/photo 3.jpg" alt="Max Henry" class="testimonails-block__photo">
+              <img
+                src="./images/people/photo 3.jpg"
+                alt="Max Henry"
+                class="testimonails-block__photo"
+              />
               <h3 class="testimonails-block__name">Max Henry</h3>
               <p class="testimonails-block__title">Chief Design Officer</p>
-              <p class="testimonails-block__about">When my lovely valley of steam rises and half-day sun is above an impermeable</p>
+              <p class="testimonails-block__about">
+                When my lovely valley of steam rises and half-day sun is above
+                an impermeable
+              </p>
             </div>
           </div>
         </section>
@@ -146,14 +287,34 @@
               </div>
               <div class="contact-info__item">
                 <h5 class="contact-info__adress">Address</h5>
-                <p class="contact-info__location">400 first ave. n.<br> suite 700<br> Minneapolis, MN<br> 55401</p>
+                <p class="contact-info__location">
+                  400 first ave. n.<br />
+                  suite 700<br />
+                  Minneapolis, MN<br />
+                  55401
+                </p>
               </div>
             </div>
             <form action="url" class="contact-form">
-              <input type="text" class="contact-form__name" placeholder="Name">
-              <input type="email" class="contact-form__email" placeholder="Email">
-              <textarea cols="30" class="contact-form__message" rows="10" placeholder="Message"></textarea>
-              <button type="submit" class="contact-form__btn">Consultation</button>
+              <input
+                type="text"
+                class="contact-form__name"
+                placeholder="Name"
+              />
+              <input
+                type="email"
+                class="contact-form__email"
+                placeholder="Email"
+              />
+              <textarea
+                cols="30"
+                class="contact-form__message"
+                rows="10"
+                placeholder="Message"
+              ></textarea>
+              <button type="submit" class="contact-form__btn">
+                Consultation
+              </button>
             </form>
           </div>
         </section>
@@ -162,9 +323,11 @@
       <!-- FOOTER -->
 
       <footer class="footer">
-        <img src="./images/logo.png" alt="logo" class="footer__logo">
+        <a href="#" class="logo-link">
+          <img src="./images/logo.png" alt="logo" class="footer__logo" />
+        </a>
       </footer>
     </main>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script type="text/javascript" src="./scripts/main.js"></script>
   </body>
 </html>
