--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="header__wrapper">
         <ul class="top-header">
           <li class="top-header__item">
-            +1 234 555-55-55
+            <a href="#" class="top-header__link">+1 234 555-55-55</a>
           </li>
           <li class="top-header__item">
             <img src="./images/mobile-icon.svg" alt="mobile icon" />
@@ -42,33 +42,36 @@
           </li>
         </ul>
 
-        <h1 class="header__title">
-          Miami<br />
-          Condo Kings
-        </h1>
+        <div class="bottom-header">
 
-        <nav class="nav header__nav">
-          <ul class="nav__list">
-            <li class="nav__item nav__item_active">
-              <a href="#" class="nav__link nav__link_active">Home</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">About Us</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Gallery</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Consultation</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Testimonials</a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="nav__link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
+          <h1 class="header__title">
+            Miami<br />
+            Condo Kings
+          </h1>
+
+          <nav class="nav header__nav">
+            <ul class="nav__list">
+              <li class="nav__item nav__item_active">
+                <a href="#" class="nav__link nav__link_active">Home</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">About Us</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Gallery</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Consultation</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Testimonials</a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="nav__link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
         <nav class="mobile-nav">
           <div class="hamburger-mobile">
             <div class="hamburger-block__item"></div>
@@ -237,7 +240,7 @@
           <div class="testimonails-block">
             <div class="testimonails-block__card">
               <img
-                src="./images/people/photo 1.jpg"
+                src="./images/people/photo 1.png"
                 alt="Leslie Mckinney"
                 class="testimonails-block__photo"
               />
@@ -249,7 +252,7 @@
             </div>
             <div class="testimonails-block__card">
               <img
-                src="./images/people/photo 2.jpg"
+                src="./images/people/photo 2.png"
                 alt="Leslie Mckinney"
                 class="testimonails-block__photo"
               />
@@ -262,7 +265,7 @@
             </div>
             <div class="testimonails-block__card">
               <img
-                src="./images/people/photo 3.jpg"
+                src="./images/people/photo 3.png"
                 alt="Max Henry"
                 class="testimonails-block__photo"
               />
