--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Miami</title>
     <link rel="stylesheet" href="./styles/main.css" />
-    <link rel="icon" href="images/favicon.ico" />
+    <link rel="icon" href="images/favicon.png" >
   </head>
   <body>
     <!-- HEADER -->
@@ -55,19 +55,19 @@
                 <a href="#" class="nav__link nav__link_active">Home</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">About Us</a>
+                <a href="#about" class="nav__link">About Us</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Gallery</a>
+                <a href="#gallery" class="nav__link">Gallery</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Consultation</a>
+                <a href="#consultation" class="nav__link">Consultation</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Testimonials</a>
+                <a href="#testimonials" class="nav__link">Testimonials</a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link">Contacts</a>
+                <a href="#contact" class="nav__link">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -111,7 +111,7 @@
 
     <main>
       <div class="main-wrapper">
-        <section class="about">
+        <section class="about" id="about">
           <h2 class="about__title">
             Miami best<br />
             Real estate <a href="#" class="about__link">here</a>
@@ -141,7 +141,7 @@
             </div>
           </div>
         </section>
-        <section class="gallery">
+        <section class="gallery" id="gallery">
           <h2 class="gallery__title">Gallery</h2>
           <div class="gallery__location">
             <div class="gallery__photos">
@@ -195,7 +195,7 @@
             <button class="gallery__btn">View all</button>
           </div>
         </section>
-        <section class="consultation">
+        <section class="consultation" id="consultation">
           <h2 class="consultation__title">Consultation</h2>
           <div class="consultation-inner">
             <div class="consultation-inner__item">
@@ -235,7 +235,7 @@
             </div>
           </div>
         </section>
-        <section class="testimonails">
+        <section class="testimonails" id="testimonials">
           <h2 class="testimonails__title">Testimonails</h2>
           <div class="testimonails-block">
             <div class="testimonails-block__card">
@@ -278,7 +278,7 @@
             </div>
           </div>
         </section>
-        <section class="contact">
+        <section class="contact" id="contact">
           <h2 class="contact__title">Contact us</h2>
           <div class="contact-block">
             <div class="contact-info">
@@ -298,7 +298,7 @@
                 </p>
               </div>
             </div>
-            <form action="url" class="contact-form">
+            <form action="#" class="contact-form">
               <input
                 type="text"
                 class="contact-form__name"
@@ -315,7 +315,7 @@
                 rows="10"
                 placeholder="Message"
               ></textarea>
-              <button type="submit" class="contact-form__btn">
+              <button class="contact-form__btn">
                 Consultation
               </button>
             </form>
